# shell-cli

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.colleague.md  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.devague/: current
.devague/deliveries/: guarded-local-operations-plane.json
.devague/frames/: guarded-local-operations-plane.json
.devague/plans/: guarded-local-operations-plane.json
.eidetic/memory/: default__public.jsonl
.github/workflows/: publish.yml  tests.yml
docs/: evidence-contract.md  release-runbook.md  skill-sources.md  threat-model.md
docs/deliveries/: 2026-07-18-guarded-local-operations-plane-m1.md  2026-07-18-guarded-local-operations-plane.md
docs/external-review/: 18-07-2026.sol.challenge.md  19-07-2026.sol.plan.md
docs/plans/: 2026-07-18-guarded-local-operations-plane.md
docs/specs/: 2026-07-18-guarded-local-operations-plane.md
scripts/: capture_colleague_baseline.py  colleague_inventory.py  handler_hashes.json  handler_hashes.py  render_plan.py
shell/: __init__.py  __main__.py  environment.py  evidence.py  operations.py  policy.py  results.py
shell/cli/: __init__.py  _errors.py  _output.py
shell/cli/_commands/: cli.py  doctor.py  explain.py  learn.py  operation.py  overview.py  policy.py  whoami.py
shell/explain/: __init__.py  catalog.py
shell/fs/: __init__.py  list.py  media.py  read.py  write.py
shell/process/: __init__.py  exec.py  shell.py
shell/runners/: __init__.py  host.py  types.py
tests/: conftest.py  test_boundaries.py  test_cli.py  test_cli_introspection.py  test_cli_operation.py  test_cli_policy.py  test_colleague_inventory.py  test_dispatch_policy.py  test_drift_gate.py  test_evidence.py  test_fs_list.py  test_fs_media.py  test_fs_read.py  test_fs_write.py  test_honesty.py  test_host_runner.py  test_operations.py  test_policy.py  test_process_exec.py  test_process_shell.py  test_redaction_boundary.py  test_zero_deps.py
tests/characterization/: colleague_adapter.py  fake_provider.py  fixtures.py  harness.py  test_behavior_fixtures.py  test_colleague_adapter_live.py  test_generator.py  test_harness_protocol.py  test_regeneration_reproducible.py  test_schema_snapshot.py
tests/fixtures/colleague/: behavior.json  meta.json  schemas.json
