[project]
name = "shell-cli"
version = "0.11.0"
description = "Agent-first CLI and agent owning the file-and-shell tool surface for AI coding agents: read, write, edit, list, view media, and gated shell execution, with path confinement and an operator approval policy. Pure-stdlib core, extracted from colleague so any host imports one safe execution layer."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/agentculture/shell-cli"
Issues = "https://github.com/agentculture/shell-cli/issues"

[project.scripts]
shell = "shell.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shell"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "teken>=0.8",
]

[tool.coverage.run]
source = ["shell"]
omit = ["shell/__pycache__/*"]
# Emit repo-relative paths in coverage.xml so SonarCloud maps them to
# sonar.sources=shell (absolute/.venv paths fail to map → empty coverage).
relative_files = true

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["shell"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
# B101 assert_used — asserts are the test suite's idiom, and tests are excluded
#   anyway; this covers the handful in library code used as invariants.
# B404 "consider the security implications of the subprocess module" and
# B603 "subprocess call with untrusted input" are skipped DELIBERATELY: running
#   subprocesses is this package's entire purpose, so both fire on essentially
#   every line of shell/runners/ and shell/process/ and would train readers to
#   ignore the report.
#
# READ THIS BEFORE ASSUMING BANDIT COVERS SUBPROCESS SAFETY HERE — it largely
# does not. What it still enforces is B602 (shell=True), which is the check that
# actually matters for this repo and is deliberately NOT skipped. The real
# guards on subprocess behaviour are the HostRunner tests, which use live
# processes, and the honesty suite.
#
# An inline `# nosec B404` / `# nosec B603` in this repo suppresses nothing —
# those codes are already skipped globally — so it reads like a silenced finding
# where none exists. Write a plain justification comment instead.
skips = ["B101", "B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
